[package]
name = "flyio"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
enum_dispatch = "0.3.13"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["full"] }


