[package]
name = "flyio"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
enum_dispatch = "0.3.13"
lru = "0.16.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["raw_value"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["full"] }
uuid = { version = "1.20.0", features = ["serde", "v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
futures-lite = "2.6.1"
casey = "0.4.2"
itertools = "0.12"
async-trait = "0.1"


